Large series of cleaning up, based on FindBugs recommandations